@@ -1,8 +1,5 @@
 #' Create plot of subject profiles with segments for range of parameters.
-#' 
-#' If no start and/or end date is available and \code{timeStartShapeVar},
-#' \code{timeEndShapeVar} are not specified: specific arrows are created.
-#' @inherit formatTimeInterval details
+#' @inheritSection formatTimeInterval Time interval representation
 #' @param rangeSimilarStartEnd numeric, if a record has the same
 #' \code{timeStartVar} and \code{timeEndVar}, what should be the range of the segment?
 #' By default, a thousandth of the range of \code{timeLim}
@@ -318,23 +315,28 @@ subjectProfileIntervalPlot <- function(
 }
 
 #' Set missing start/end time variable in the data.
-#' @details 
-#' In case of missing values for the time start or end variables, they are replaced by:
+#' @section Time interval representation:
+#' In case the start or the end of the time interval contain missing values:
 #' \itemize{
-#' \item{in case \code{timeLimData}, \code{timeLimStartVar} and \code{timeLimEndVar} are specified: }{
-#'  the minimum/maximum values in the variables: \code{timeLimStartVar}/\code{timeLimEndVar} 
-#' respectively are considered
-#'  in the data: \code{timeLimData}
-#' for the specific subject (if available). If there are missing for a specific subject,
-#' they are taken across subjects.}
+#' \item{if a dataset (\code{timeLimData}), start (\code{timeLimStartVar})
+#' and end (\code{timeLimEndVar}) variables are specified: }{
+#' \enumerate{
+#' \item{for each subject: }{
+#' \itemize{
+#' \item{the minimum and maximum time values across these specified time variables are extracted}
+#' \item{missing start values are replaced by the minimum time}
+#' \item{missing start values are replaced by the maximum time}
+#' }}
+#' \item{if all values are missing for this subject, they are taken across subjects}
+#' }}
 #' \item{otherwise, depending on the imputation type (\code{timeImpType}): }{
 #' \itemize{
 #' \item{'minimal' (by default): }{
 #' \itemize{
-#' \item{if start end and time are missing: }{no imputation is done, only the label is displayed}
-#' \item{if start time is missing and end time is not missing: }{
+#' \item{if the start and the end of the interval are missing: }{no imputation is done, only the label is displayed}
+#' \item{if the start time is missing and the end time is not missing: }{
 #' start time is imputed with end time, and status is set to 'Missing start'}
-#' \item{if end time is missing and start time is not missing: }{
+#' \item{if the end time is missing and the start time is not missing: }{
 #' end time is imputed with start time, and status is set to 'Missing end'}
 #' }}
 #' \item{'data-based' (default in version < 1.0.0): }{
@@ -343,6 +345,18 @@ subjectProfileIntervalPlot <- function(
 #' they are taken across subjects. If all time are missings, the range is set to 0 and Inf}
 #' \item{'none': }{no imputation is done}
 #' }}}
+#' The symbols displaedy at the start and end of the interval are:
+#' \itemize{
+#' \item{by default: }{
+#' \itemize{
+#' \item{a filled square labelled 'Complete' if the time is not missing}
+#' \item{a filled left-directed arrow in case of missing start time}
+#' \item{a filled right-directed arrow in case of missing end time}
+#' }}
+#' \item{if the variable(s) used for the shape of the start or end 
+#' of the interval are specified (via \code{timeStartShapeVar}/\code{timeEndShapeVar}): }{
+#' labels are based on these variables, and a standard shape palette is used}
+#' }
 #' The time limits are the same across subjects, and set to:
 #' \itemize{
 #' \item{\code{timeLim} if specified}
@@ -355,9 +369,15 @@ subjectProfileIntervalPlot <- function(
 #' @param timeEndVar String, variable of \code{data} 
 #' with end of time interval.
 #' @param timeStartShapeVar (optional) String, variable of \code{data} 
-#' used for the shape of the symbol displayed at the start of the time interval.
+#' used for the shape of the symbol displayed 
+#' at the start of the time interval.\cr
+#' If not specified, default shape palette is used,
+#' see section 'Time interval representation'.
 #' @param timeEndShapeVar String, variable of \code{data} 
-#' used for the shape of the symbol displayed at the end of the time interval.
+#' used for the shape of the symbol 
+#' displayed at the end of the time interval.
+#' If not specified, default shape palette is used,
+#' see section 'Time interval representation'.
 #' @param timeLab String, label for \code{timeVar}.
 #' This is used in the message
 #' indicating missing values for \code{timeVar},
@@ -370,7 +390,7 @@ subjectProfileIntervalPlot <- function(
 #' @param timeLimEndVar string, variable of \code{timeLimData} with time end
 #' @param timeLimEndLab String, label for \code{timeLimEndVar}.
 #' @param timeImpType String with imputation type: 'minimal' (default),
-#' 'data-based' or 'none'.
+#' 'data-based' or 'none', see section: 'Time interval representation'.
 #' @param labelVars Named character vector with variable labels 
 #' (names are the variable code)
 #' @inheritParams filterData
